# Rent-vs-Buy

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: validation.ipynb
rent_vs_buy/: __init__.py  config.py  mortgage.py  plots.py  simulation.py  stamp_duty.py
rent_vs_buy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_rent_vs_buy.py
